--- a/platformio.ini
+++ b/platformio.ini
@@ -27,8 +27,9 @@
 ; ------------------------------------------------------------------------------
 
 [platformio]
+
 default_envs = 
-    <platformio.ini board selector guard> Comment this line and uncomment one board-id below:
+;    <platformio.ini board selector guard> Comment this line and uncomment one board-id below:
 
     ; LoRa development boards with integrated LoRa support:
 
@@ -36,7 +37,7 @@ default_envs =
     ;---------                            ----------
     ; adafruit_feather_m0_lora          ; Adafruit Feather M0 LoRa
     ; disco_l072cz_lrwan1               ; Discovery B-L072Z-LRWAN1
-    ; heltec_wifi_lora_32_v2            ; Heltec Wifi LoRa 32 V2
+    heltec_wifi_lora_32_v2            ; Heltec Wifi LoRa 32 V2
     ; heltec_wifi_lora_32               ; Heltec Wifi LoRa 32
     ; heltec_wireless_stick_lite        ; Heltec Wireless Stick Lite
     ; heltec_wireless_stick             ; Heltec Wireless Stick
@@ -80,7 +81,7 @@ default_envs =
 monitor_speed = 115200                 ; No need to change this.
 
 build_flags =
-    -D DO_WORK_INTERVAL_SECONDS=60
+    -D DO_WORK_INTERVAL_SECONDS=900     ; default to 15 minute uplinks
 
     ; -D ABP_ACTIVATION                ; Use ABP instead of OTAA activation.
     ;
@@ -98,6 +99,14 @@ lib_deps =
     olikraus/U8g2                      ; OLED display library
     lnlp/EasyLed                       ; LED library
 ;   ███ Add additional libraries for User Code below this line ███
+;
+
+;  	openenergymonitor/EmonLib @ ^1.1.0                  ;   this is built for ATMEL, so need esp32 verison
+	https://github.com/Savjee/EmonLib-esp32.git         ; added for ESP32 emon
+    https://github.com/HelTecAutomation/ESP32_LoRaWAN   ; added for some display stuff
+	knolleary/PubSubClient@^2.8                         ; mqtt via wifi for testing, disable for now
+    winlinvip/SimpleDHT @ ^1.0.15                       ; dht22 sensor - temperature and humidity
+
 
 
 ; -------------------------------
@@ -147,7 +156,7 @@ build_flags =
     -D DISABLE_PING
     -D DISABLE_BEACONS
 
-    ; -D LMIC_DEBUG_LEVEL=1            ; 0, 1 or 2
+    -D LMIC_DEBUG_LEVEL=1            ; 0, 1 or 2
     
     ; -D CFG_sx1272_radio=1            ; Use for SX1272 radio
     -D CFG_sx1276_radio=1              ; Use for SX1276 radio
@@ -163,10 +172,10 @@ build_flags =
     ; -D CFG_cn490=1                   ; Not yet supported
     ; -D CFG_cn783=1                   ; Not yet supported
     ; -D CFG_eu433=1                   ; Not yet supported
-    -D CFG_eu868=1
+    ; -D CFG_eu868=1
     ; -D CFG_in866=1
     ; -D CFG_kr920=1
-    ; -D CFG_us915=1
+    -D CFG_us915=1
 
 
 ; --------------------------------------------------
@@ -278,7 +287,8 @@ build_flags =
     -D LMIC_PRINTF_TO=Serial    
     -D USE_SERIAL
     -D USE_LED
-    -D USE_DISPLAY
+; turnoff display, quick hack so we can debug with heltec fonts and update sensor vs LMIC stuff on display
+;    -D USE_DISPLAY
 
 
 [env:heltec_wifi_lora_32]
